to pizda ya yebenu

--- a/Server/src/CMakeLists.txt
+++ b/Server/src/CMakeLists.txt
@@ -4,3 +4,10 @@ add_subdirectory(print)
 add_subdirectory(test)
 add_subdirectory(service)
 add_subdirectory(main)
+
+include_directories(
+    ${CMAKE_SOURCE_DIR}/Server/include/main
+    ${CMAKE_SOURCE_DIR}/Server/include/resource
+    ${CMAKE_SOURCE_DIR}/Server/include/util
+    # Інші шляхи до заголовків, якщо необхідно
+)
